initial dmenu configuration

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/hariprasad12994/dwm
 [submodule "dmenu"]
 	path = dmenu
-	url = git://git.suckless.org/dmenu
+	url = https://github.com/hariprasad12994/dmenu
