--- a/dotfiles/tmux/.config/tmux/tmux.conf
+++ b/dotfiles/tmux/.config/tmux/tmux.conf
@@ -19,7 +19,7 @@ set -g mouse on
 set-option -g allow-rename off
 
 # switch panes with alt key
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -n M-j select-pane -L
+bind -n M-l select-pane -R
+bind -n M-i select-pane -U
+bind -n M-k select-pane -D
