--- a/dotfiles/tmux/.config/tmux/tmux.conf
+++ b/dotfiles/tmux/.config/tmux/tmux.conf
@@ -23,3 +23,11 @@ bind -n M-j select-pane -L
 bind -n M-l select-pane -R
 bind -n M-i select-pane -U
 bind -n M-k select-pane -D
+
+# set vim keybinding 
+set-window-option -g mode-keys vi
+# enable vim like buffer copy
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
