--- a/dotfiles/tmux/.config/tmux/tmux.conf
+++ b/dotfiles/tmux/.config/tmux/tmux.conf
@@ -24,10 +24,16 @@ bind -n M-l select-pane -R
 bind -n M-i select-pane -U
 bind -n M-k select-pane -D
 
+bind -r j resize-pane -U 5
+bind -r k resize-pane -D 5
+bind -r h resize-pane -R 5
+bind -r l resize-pane -L 5
+bind -r resize-pane -Z
+
 # set vim keybinding 
 set-window-option -g mode-keys vi
 # enable vim like buffer copy
 bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
