Updated sys-config as of jul_07_24

--- a/dotfiles/tmux/.config/tmux/tmux.conf
+++ b/dotfiles/tmux/.config/tmux/tmux.conf
@@ -16,7 +16,7 @@ bind r source-file ~/.config/tmux/tmux.conf
 set -g mouse on
 
 # dont allow auto rename of the window
-set-option -g allow-rename off
+# set-option -g allow-rename off
 
 # switch panes with alt key
 bind -n M-j select-pane -L
